# streamline-ux

./: .clang-format  .gitignore  CMakeLists.txt
include/ux/: affix.hpp  animation.hpp  buffer.hpp  common.hpp  dashboard.hpp  input.hpp  listener.hpp  log.hpp  renderer.hpp  widget.hpp
src/: main.cpp
src/ux/: affix.cpp  animation.cpp  buffer.cpp  common.cpp  dashboard.cpp  input.cpp  log.cpp  renderer.cpp  widget.cpp
